--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+application.title=CodingDojo
+application.vendor=yulli
+endorsed.classpath=
 #Wed Mar 20 06:58:57 BRT 2019
 excludes=
 file.reference.commons-io-2.4.jar-1=libs_coletor/commons-io-2.4.jar
@@ -8,12 +11,17 @@ file.reference.log4j-1.2.14.jar-1=libs_coletor/log4j-1.2.14.jar
 file.reference.ocutil-2.4.2.jar-1=libs_coletor/ocutil-2.4.2.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 javac.external.vm=true
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.8
 file.reference.commons-io-2.4.jar=/home/aluno/\u00C1rea de Trabalho/libs_coletor/commons-io-2.4.jar
 annotation.processing.processors.list=
@@ -38,14 +46,13 @@ build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-annotation.processing.processor.options=
 javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
 javac.source=1.8
 file.reference.ocutil-2.4.2.jar=/home/aluno/\u00C1rea de Trabalho/libs_coletor/ocutil-2.4.2.jar
 junit.selected.version=4
 debug.classpath=${run.classpath}
-run.jvmargs=
+run.jvmargs=-Xms6000m
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
